maybe now the background is fixed on ios

--- a/css/style.css
+++ b/css/style.css
@@ -95,10 +95,9 @@ h2 {
   color: #d63384;
 }
 
-
 .background1 {
   background-image: url(../i/background1.jpg);
-  background-size: 100%;
+  background-size: cover;
   background-attachment: fixed;
   height: 40vh;
   width: 100vw;
@@ -108,14 +107,20 @@ h2 {
 
 .background2 {
   background-image: url(../i/background2.jpg);
-  background-size: 100%;
-  background-attachment: local;
+  background-size: cover;
+  background-attachment: fixed;
   height: 40vh;
   width: 100vw;
   padding:0;
   margin:0; 
 }
 
+@supports (-webkit-overflow-scrolling: touch) {
+  .background1 { background-attachment: scroll;  
+  } 
+  .background2 { background-attachment: scroll;  
+  } 
+}
 
 .social {
   padding-right: 10%;
